updated some link

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
   <header>
     <h1>Sun Life Design Jam: Financial Literacy Made Fun</h1>
     <nav>
-      <a href="https://soifa.github.io/sofia-portfolio/#about">About</a>
-      <a href="#portfolio">Portfolio</a>
+      <a href="https://s67xu.github.io/sofia-portfolio/#projects">About</a>
+      <a href="https://s67xu.github.io/gallery/">Portfolio</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
